// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-gqUUDT bAAxuz"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-gqUUDT bAAxuz"
  >
    Default color is Bulma
  </p>
  <p
    className="sc-gqUUDT ehesJa"
    color="piccolo.100"
  >
    Piccolo
  </p>
  <p
    className="sc-gqUUDT hrORlM"
    color="trunks.100"
  >
    Trunks
  </p>
  <p
    className="sc-gqUUDT fgeGtK"
    color="krillin.100"
  >
    Krillin
  </p>
</div>
`;

exports[`Caption renders font-weight 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-gqUUDT bAAxuz"
  >
    Default font-weight is regular
  </p>
  <p
    className="sc-gqUUDT kTgapN"
  >
    Font-weight is bold
  </p>
</div>
`;

exports[`Caption renders line height 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-gqUUDT bAAxuz"
  >
    Line-height is pre-calculated
  </p>
  <p
    className="sc-gqUUDT eCGuzy"
  >
    Custon line-height
  </p>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-gqUUDT bAAxuz"
  >
    Paragraph is a default tag
  </p>
  <span
    className="sc-gqUUDT bAAxuz"
  >
    Span tag
  </span>
  <label
    className="sc-gqUUDT bAAxuz"
  >
    Label tag
  </label>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-gqUUDT bAAxuz"
  >
    Default font-size is 16px
  </p>
  <p
    className="sc-gqUUDT hueLw"
    size={24}
  >
    Size is 24px
  </p>
  <p
    className="sc-gqUUDT ePWNoA"
    size={48}
  >
    Size is 48px
  </p>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-gqUUDT bAAxuz"
  >
    Text-align is not specified
  </p>
  <p
    className="sc-gqUUDT gLSviE"
  >
    Centered Text
  </p>
  <p
    className="sc-gqUUDT gxKfvr"
  >
    Right alignment
  </p>
</div>
`;

exports[`Caption renders underline 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-gqUUDT bAAxuz"
  >
    Default text-decoration is none
  </p>
  <p
    className="sc-gqUUDT jzCpUK"
  >
    Underline Text
  </p>
</div>
`;

exports[`Caption renders uppercase 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-gqUUDT bAAxuz"
  >
    Default text-transform is none
  </p>
  <p
    className="sc-gqUUDT eNcMbE"
  >
    Uppercase Text
  </p>
</div>
`;
